--- a/style.css
+++ b/style.css
@@ -1,5 +1,55 @@
-body {
-    color: deeppink;
-    text-align: center;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    font-size: 62.5%;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+    background-color: #333533;
+    font-size: 1.6rem;
+}
+
+.header {
+    align-items: center;
+    background-color: #242423;
+    display: flex;
+    justify-content: space-between;
+    height: 50px;
+    padding: 10px 40px;
+    width: 100vw;
+}
+
+li, a {
+    color: white;
+    text-decoration: none;
+}
+
+.header__img--logo {
+    cursor: pointer;
+    height: 100%;
+}
+
+.header-nav ul {
+    background-color: #333533;
+    border-radius: 20px;
+}
+
+.header-nav ul li {
+    display: inline-block;
+    padding: 5px 15px;
+}
+
+.header__button--contact {
+    background-color: #339989;
+    border: none;
+    border-radius: 20px;
+    color: white;
+    cursor: pointer;
+    height: 30px;
+    padding: 3px 10px;
 }
