--- a/style.css
+++ b/style.css
@@ -53,3 +53,44 @@ li, a {
     height: 30px;
     padding: 3px 10px;
 }
+
+.main {
+    color: #f2f2f2;
+    height: auto;
+    padding: 30px 0px;
+    width: 100vw;
+}
+
+.main__carac--left {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+.main__carac--right {
+    align-items: center;
+    display: flex;
+    flex-direction: row-reverse;
+    width: 100%;
+}
+
+.main__img {
+    width: 50%;
+}
+
+.main-text-container {
+    letter-spacing: 1px;
+    padding: 80px;
+    text-align: left;
+    width: 50%;
+}
+
+.main-text__title {
+    font-size: 3.2rem;
+    margin-bottom: 25px;
+}
+
+.main-text-container p {
+    font-size: 1.8rem;
+}
